@@ -19,13 +19,13 @@ import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpClientErrorException;
 
+import java.io.IOException;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -82,13 +82,13 @@ public class ChartInkServiceImpl implements ChartInkService {
                     return m == null ? null : StockMarginDto.builder()
                             .name(stock.getName())
                             .symbol(stock.getNsecode())
-                            .margin(m.getMargin())
+                            .margin(m.getRequiredMargin())
                             .close(stock.getClose())
                             .build();
                 })
                 .filter(Objects::nonNull)
                 .sorted(Comparator.comparingDouble(StockMarginDto::getMargin).reversed())
-                .collect(Collectors.toList());
+                .toList();
 
         stringRedisTemplate.opsForValue().set(redisKey, HelperUtil.GSON.toJson(result), DateUtil.getNseCacheExpiryTime());
         return result;
@@ -114,7 +114,7 @@ public class ChartInkServiceImpl implements ChartInkService {
                 .filter(dto -> dto.getMarketTime().toLocalDate().isEqual(today))
                 .map(this::enrichWithMargin)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -122,7 +122,7 @@ public class ChartInkServiceImpl implements ChartInkService {
         return fetchBacktestData(strategyName).stream()
                 .map(this::enrichWithMargin)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private ChartInkBacktestMarginDto enrichWithMargin(ChartInkBacktestDto dto) {
@@ -131,8 +131,8 @@ public class ChartInkServiceImpl implements ChartInkService {
         List<Margin> margins = dto.getStocks().stream()
                 .map(symbol -> marginService.getMarginCache().get(symbol))
                 .filter(Objects::nonNull)
-                .sorted(Comparator.comparingDouble(Margin::getMargin).reversed())
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparingDouble(Margin::getRequiredMargin).reversed())
+                .toList();
 
         if (margins.isEmpty()) return null;
 
@@ -203,6 +203,6 @@ public class ChartInkServiceImpl implements ChartInkService {
 
     @FunctionalInterface
     private interface ChartinkAction<T> {
-        T apply() throws Exception;
+        T apply() throws IOException;
     }
 }
